fix(EntityList): prevent word wrap in entityItem title
related to OPT-1452

--- a/client/src/modules/components/EntityList/EntityItem.scss
+++ b/client/src/modules/components/EntityList/EntityItem.scss
@@ -62,6 +62,7 @@
           text-overflow: ellipsis;
           max-width: 80%;
           overflow: hidden;
+          white-space: nowrap;
         }
 
         span {
